src/test/deca/context/valid/SansObjet/Div-readFloat-float.deca
// Description:
//      using readFloat in a plus operation
//
// Results:
//     nothing
//
// Historique:
//    cree le 14/01/2022

{
    float x =  readFloat() * 3.0 ;
}
