src/test/deca/context/invalid/SansObjet/DeclVar-Mult-boolean-string-float.deca
// Description:
//    Declaration of a boolean variable using * operation between a string variable and float .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.33) Illegal operand type.
// 
// Historique: 
//    cree le 11/01/2022 

{
    string x =  "Everyone"; 
    float y = 3.14; 
    boolean z = "Everyone" * 3.14; 
}
